# DUNEreco

./: .gitignore  CITATION.cff  README.md  download_dataset.sh  setup.cfg  setup.py
.github/workflows/: pytest.yaml  pythonpublish.yaml
analysis/: analysis_dn.py  analysis_roi.py  compare_dn_wiener.py  compare_dn_wires.py  compare_roi_hits.py  plot_roi_timpact.py
benchmarks/: canny_filter.py  compute_denoising_performance.py  denoising_example.py  make_inference.sh  pandora_hits_results.py  pandora_wires_results.py  plot_SSIM.py  plot_crop_sample.py  wiener_filter.py  wires_stats.py
benchmarks/onnx/: README.md  load_onnx.py  save_onnx.py
configcards/: cnn_dn_collection_config.yaml  cnn_dn_collection_configcard.yaml  cnn_dn_induction_configcard.yaml  cnn_roi_collection_configcard.yaml  cnn_roi_induction_configcard.yaml  default_config.yaml  gcnn_dn_collection_config.yaml  gcnn_dn_collection_configcard.yaml  gcnn_dn_induction_config.yaml  gcnn_dn_induction_configcard.yaml  gcnn_roi_collection_configcard.yaml  gcnn_roi_induction_configcard.yaml  uscg_dn_collection_configcard.yaml  uscg_dn_induction_configcard.yaml  uscg_roi_collection_configcard.yaml  uscg_roi_induction_configcard.yaml
denoising/: SCG_Net.py  analisys.py  analysis.py  args.py  dataloader.py  denoise.py  distributed.py  hitreco.py  launch_distributed.sh  losses.py  model.py  model_utils.py  plot_SSIM.py  plot_hopt.py  run_hopt.py  ssim.py  train.py  wiener_filter.py  wires_stats.py
denoising/analysis/: analysis_dn.py  analysis_roi.py  (+5 more)
deprecated/: README.md  larsoft_products_processing.py  utils.py
examples/: README.md  gcnn_inference.ipynb  gcnn_inference.py  onnx_accuracy_example.ipynb  onnx_accuracy_example.py  onnx_example.ipynb  onnx_example.py  onnx_performance_example.ipynb  onnx_performance_example.py  plot_event_example.py  run_plot_example.sh
preprocess/: efficiency.py  larsoft_products_processing.py  preprocess.py  preprocess_recob.py  preprocessing_utils.py  putils.py
runcards/: default.yaml
utils/: utils.py
(+136 files in other folders)
