# This file is part of DUNEdn by M. Rossi
[metadata]
name = dunedn
version = 2.0.0
author = M. Rossi
author_email = marco.rossi@cern.ch
description = ProtoDUNE raw data denoising with DL
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/marcorossi5/DUNEdn.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    pyyaml
    torch
    torchvision
    matplotlib
    hyperopt
    onnx
    onnxruntime

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7