# This file is part of DUNEdn by M. Rossi
[metadata]
name = dunedn
version = 2.0.0
author = M. Rossi
author_email = marco.rossi@cern.ch
description = ProtoDUNE raw data denoising with DL
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/marcorossi5/DUNEdn.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    pyyaml==6.0.0
    torch==1.11.0
    torchvision==0.12.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dunedn = dunedn.scripts.dunedn:main

[options.extras_require]
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7

examples =
    jupyter==1.0.0
    matplotlib==3.5.2

onnx =
    onnx==1.11.0
    onnxruntime==1.11.1